# tot-rs

./: Cargo.toml  README.md
src/: cli.rs  de.rs  error.rs  lib.rs  main.rs  parser.rs  ser.rs
src/parser/: string.rs
tests/: e2e.rs
