[package]
name = "tot"
version = "0.2.0-alpha.2"
edition = "2021"
authors = ["Tim Yuen <timothy.yuen22@gmail.com>"]
categories = ["encoding", "parser-implementations", "config"]
description = "Tot format serialization and deserialization"
keywords = ["tot", "serde"]
repository = "https://github.com/totlang/tot-rs"
readme = "README.md"
license = "MPL-2.0"
documentation = "https://docs.rs/tot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
nom = "7.1"
serde = "1.0"
thiserror = "1.0"
ryu = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"]}
